@@ -1,13 +1,0 @@
-#ifndef AUDIOCONFIGPORTLADDER8BIT_H
-#define AUDIOCONFIGPORTLADDER8BIT_H
-
-
-/** 8 bit sound at 16384 Hz, without PWM
-Timer 1: outputs samples at AUDIO_RATE 16384 Hz, by setting whole 8 bit PORT 
-Output on .....
-Requires external resistor ladder.
-*/
-#define PORT_LADDER_8_BIT
-
-#endif        //  #ifndef AUDIOCONFIGPORTLADDER8BIT_H
-
