@@ -1,3 +1,4 @@
 15 March 2013
 - Included FrequencyTimer2 and used it at AUDIO_RATE to drive Timer1 doing high speed PWM.  
 - Modified FrequecyTimer2.cpp, moved ISR to MozziGuts.
+- Modified TimerOne.h to operate in Fast PWM mode rather than Phase and Frequency Correct mode.
